--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "zustand": "^4.1.3"
   },
   "devDependencies": {
+    "@types/node": "^18.11.7",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "@vitejs/plugin-react": "^2.2.0",
